<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="device_item_control_button_title">操作</string>
    <string name="device_item_header_temperature_label">温度</string>
    <string name="device_item_header_temperature_unit">℃</string>
    <string name="device_item_header_pressure_label">気圧</string>
    <string name="device_item_header_pressure_unit">hPa</string>
    <string name="device_item_header_humidity_label">湿度</string>
    <string name="device_item_header_humidity_unit">%</string>
    <string name="device_item_header_lux_label">照度</string>
    <string name="device_item_header_lux_unit">lux</string>
    <string name="device_item_section_local_device_title">ローカルデバイス</string>
    <string name="device_item_section_remote_device_section_title">リモートデバイス</string>
    <string name="power_control_on_button">On</string>
    <string name="power_control_off_button">Off</string>
    <string name="air_conditioner_cool">冷房</string>
    <string name="air_conditioner_heat">暖房</string>
    <string name="air_conditioner_plus_button">+</string>
    <string name="air_conditioner_minus_button">−</string>
</resources>